change backend to heroku, truncate string and fix player style issues

--- a/src/css/lofi/music-player.css
+++ b/src/css/lofi/music-player.css
@@ -42,7 +42,6 @@
   height: 100%;
 }
 .musicplayer .current-song .song-name {
-  margin-top: 30px;
   font-size: 22px;
 }
 .musicplayer .current-song .song-autor {
